--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="puzzle"></div>
   <button id="solve-btn">Solve</button>
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
